--- a/src/shared/assets/styles/_mixins.scss
+++ b/src/shared/assets/styles/_mixins.scss
@@ -1,17 +1,16 @@
 @mixin to($to) {
-   @media (max-width: $to) {
-      @content;
-   }
+  @media (max-width: $to) {
+    @content;
+  }
 }
 
-@mixin font-face($font-family, $weight, $weightStr, $style) {
-   @font-face {
-      font-family: $font-family;
-      font-style: $style;
-      font-weight: $weight;
-      src:
-         url('/fonts/woff2/' + $font-family + '-' + $weightStr + '.woff2') format('woff2'),
-         url('/fonts/woff/' + $font-family + '-' + $weightStr + '.woff') format('woff');
-   }
+@mixin font-face($font-family, $weight, $weightStr) {
+  @font-face {
+    font-family: $font-family;
+    font-style: 'normal';
+    font-weight: $weight;
+    src:
+      url('/fonts/woff2/' + $font-family + '-' + $weightStr + '.woff2') format('woff2'),
+      url('/fonts/woff/' + $font-family + '-' + $weightStr + '.woff') format('woff');
+  }
 }
-
